Try to fetch the value which is most likely to be cached. Apply some IntelliJ inspection recommendations.